# llm-weaver

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  svc-credentials.json
.github/workflows/: rust.yml
examples/: basic_usage.rs
loreweaver-systems/: story-small-system.txt  story-small.txt
src/: architecture.rs  lib.rs  loom.rs  loreweaver.rs  main.rs  mock.rs  storage.rs  tests.rs  types.rs
src/discord/: server.rs
src/discord/server/: commands.rs
src/discord/server/commands/: create.rs  mod.rs  utilities.rs
src/discord/server/event_handlers/: create.rs  mod.rs  utilities.rs
src/loreweaver/: types.rs
src/service/: server.rs
src/storage/: common.rs  mod.rs  redis.rs  rocksdb.rs
