[package]
publish = true
name = "llm-weaver"
version = "1.0.3"
edition = "2021"
description = "Manage long conversations with any LLM"
readme = "README.md"
repository = "https://github.com/snowmead/llm-weaver"
license = "MIT"
keywords = ["llm", "framework", "chatbot"]
categories = ["api-bindings"]
exclude = [
    "compose.yaml",
    ".idea",
    ".github",
    ".DS_Store",
    ".gitignore",
    ".rustfmt.toml",
    "assets/*",
]

[dependencies]
async-openai = "0.15.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
redis = { version = "0.23.3", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "json",
] }
chrono = "0.4.31"
thiserror = "1.0.49"
async-trait = "0.1.73"
num-traits = "0.2.17"
bounded-integer = { version = "0.5.7", features = ["types", "num-traits02"] }
aquamarine = "0.3.2"
