[package]
publish = true
name = "llm-weaver"
version = "0.1.99"
edition = "2021"
description = "Manage long conversations with any LLM"
readme = "README.md"
repository = "https://github.com/loreweaver-xyz/llm-weaver"
license = "MIT"
keywords = ["llm", "framework", "chatbot"]
categories = ["api-bindings"]
exclude = [
    "compose.yaml",
    ".idea",
    ".github",
    ".DS_Store",
    ".gitignore",
    ".rustfmt.toml",
    "assets/*",
]

[dependencies]
async-openai = "0.23.4"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
rocksdb = { version = "0.22.0", features = [
    "multi-threaded-cf",
], optional = true }
chrono = "0.4.31"
thiserror = "1.0.49"
async-trait = "0.1.73"
num-traits = "0.2.17"
bounded-integer = { version = "0.5.7", features = ["types", "num-traits02"] }
aquamarine = "0.3.2"
tiktoken-rs = "0.5.8"
clap = "4.5.18"
num_cpus = "1.16.0"
lazy_static = "1.5.0"

[dev-dependencies]
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[features]
rocksdb = ["dep:rocksdb"]
